vnet.tf
# We strongly recommend using the required_providers block to set the
# Azure Provider source and version being used
// terraform {
//   backend "azurerm" {
//     resource_group_name  = "StorageAccount-ResourceGroup"
//     storage_account_name = "team2project"
//     container_name       = "tfstate"
//     key                  = "path/to/my/key/prod.terraform.tfstate"
//     access_key = "pbdzjjYmnpXTUmYIi/bLxl5qhq+iDbkHXCTFe+UhTwi1UoF1ZvzOszr/KcZFXtkvLPgm+YiyX6NI+AStIDDJsA=="
//   }
// }



terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "=2.97.0"
    }
  }
}

# Configure the Microsoft Azure Provider
provider "azurerm" {
  features {}
}

# Create a resource group
resource "azurerm_resource_group" "terraform" {
  name     = "terraform-resources"
  location = "westus"
}
resource "azurerm_network_security_group" "terraform" {
  name                = "terraform-security-group"
  location            = azurerm_resource_group.terraform.location
  resource_group_name = azurerm_resource_group.terraform.name
}
resource "azurerm_network_security_rule" "terraform" {
  name                        = "test123"
  priority                    = 100
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.terraform.name
  network_security_group_name = azurerm_network_security_group.terraform.name
}

# Create a virtual network within the resource group
// resource "azurerm_virtual_network" "terraform" {
//   name                = "terraform_vnet"
//   location            = azurerm_resource_group.terraform.location
//   resource_group_name = azurerm_resource_group.terraform.name
//   address_space       = ["10.0.0.0/16"]

//   subnet {
//     name           = "subnet1"
//     address_prefix = "10.0.1.0/24"
//     security_group = azurerm_network_security_group.terraform.id
//   }

//   subnet {
//     name           = "subnet2"
//     address_prefix = "10.0.2.0/24"
//     security_group = azurerm_network_security_group.terraform.id
//   }
//   subnet {
//     name           = "subnet3"
//     address_prefix = "10.0.3.0/24"
//     security_group = azurerm_network_security_group.terraform.id
//   }
// }

module "vnet" {
  source              = "Azure/vnet/azurerm"
  resource_group_name = azurerm_resource_group.terraform.name
  vnet_location       = "East US"
  address_space       = ["10.0.0.0/16"]
  subnet_prefixes     = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  subnet_names        = ["subnet1", "subnet2", "subnet3"]



// output "vnet_id" {
//     value = azurerm_virtual_network.terraform.id
// }


// output "subnet"{
//     value = azurerm_virtual_network.terraform.subnet
// }


// output "vnet_name"{
//     value = azurerm_virtual_network.terraform.name
// }
// output resource_group_name {
//   value = azurerm_resource_group.terraform.name
// }
